tests/ui/async-await/async-fn/impl-header.stderr
error: expected type, found keyword `async`
  --> $DIR/impl-header.rs:5:6
   |
LL | impl async Fn<()> for F {}
   |      ^^^^^ expected type

error: aborting due to 1 previous error

